--- a/app/assets/stylesheets/partials/abstractions/_arrows.scss
+++ b/app/assets/stylesheets/partials/abstractions/_arrows.scss
@@ -21,7 +21,7 @@
 /* Set variables */
 $arrow-width: 8px;
 
-$arrow-bg: $color-light-txt;
+$arrow-bg: $color-txt-light;
 
 /* Start abstraction */
 .arrow {
