--- a/app/assets/stylesheets/partials/abstractions/_block-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_block-list.scss
@@ -11,7 +11,7 @@
 /* Shared */
 .block-list {
   &,
-  > li {border: 0 solid $color-grey-1;}
+  > li {border: 0 solid $color-grey-med-3;}
 }
 
 .block-list {
