--- a/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_horizontal-list.scss
@@ -30,7 +30,7 @@
 
 /* With dividers */
 .horiz-list--dividers > li {
-	border-left: 1px solid $color-grey-3;
+	border-left: 1px solid $color-grey-light-2;
 	padding-left: to-em($spacing-half);
 	margin-left: to-em($spacing-half);
 
