--- a/app/assets/stylesheets/partials/abstractions/_island.scss
+++ b/app/assets/stylesheets/partials/abstractions/_island.scss
@@ -114,4 +114,4 @@
 
 /* Solid bg */
 .island--fill,
-.islet--fill {background-color: $color-off-white;}
+.islet--fill {background-color: $color-grey-light-3;}
