--- a/app/assets/stylesheets/partials/base/_misc.scss
+++ b/app/assets/stylesheets/partials/base/_misc.scss
@@ -9,7 +9,7 @@ hr {
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid $color-grey-1;
+  border-top: 1px solid $color-grey-med-3;
   padding: 0;
 	position: relative;
 }
