--- a/app/assets/stylesheets/partials/buttons/_menu.scss
+++ b/app/assets/stylesheets/partials/buttons/_menu.scss
@@ -31,7 +31,7 @@
 			width: to-rem(20);
 			height: 3px;
 			border-radius: 1px;
-			background-color: $color-med-txt;
+			background-color: $color-grey-dark-3;
 		}
 
 		/* Top and bottom lines */
