--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -274,4 +274,4 @@
 .icon--base-size:before {font-size: inherit;}
 
 /* Colour */
-.icon--base-color:before {color: $color-base-txt;}
+.icon--base-color:before {color: $color-txt-base;}
