--- a/app/assets/stylesheets/partials/modules/_list-divider.scss
+++ b/app/assets/stylesheets/partials/modules/_list-divider.scss
@@ -18,7 +18,7 @@
 	@include font-size($font-size-sml, 1.5);
 	font-weight: bold;
 	display: block;
-	border-bottom: 1px solid $color-grey-2;
+	border-bottom: 1px solid $color-grey-light-1;
   /* The padding-right is to make space for the arrow icon */
 	@include to-rem(padding, $spacing-half $spacing-base $spacing-quarter 0);
 
