--- a/app/assets/stylesheets/partials/abstractions/_box.scss
+++ b/app/assets/stylesheets/partials/abstractions/_box.scss
@@ -24,7 +24,7 @@
 .box--torn {
   background: none;
   box-shadow: none;
-  border: 1px solid $color-grey-2;
+  border: 1px solid $color-grey-light-1;
   border-bottom: 0;
   position: relative;
 
