--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -5,7 +5,7 @@
 /* Styles for `body` element */
 .national {
   padding-bottom: 0;
-  background-color: $color-dark-txt;
+  background-color: $color-grey-dark-1;
 
   /* Remove cursor and border on `abbr` when it's in an anchor */
   a abbr {
@@ -94,7 +94,7 @@
               opacity: 1;
 
               &,
-              .icon:before {color: $color-grey-2;}
+              .icon:before {color: $color-grey-light-1;}
             }
           }
 
@@ -300,7 +300,7 @@
         position: relative;
         background-size: cover;
         background-position: 0 0;
-        border-bottom: 1px solid $color-base-txt;
+        border-bottom: 1px solid $color-grey-dark-2;
 
         /* First `.national__centre-tile` gets `box-shadow` */
         li:first-child & {box-shadow: inset 0 4px 4px 0 rgba(0,0,0,.4)}
@@ -355,11 +355,11 @@
 
       /* Shared rules */
       &,
-      a {color: $color-grey-1;}
+      a {color: $color-grey-med-3;}
 
       /* Hover and focus states */
       a:hover,
-      a:focus {color: $color-light-txt;}
+      a:focus {color: $color-txt-light;}
 
       .container {@extend %clear-fix;}
 
