--- a/app/assets/stylesheets/partials/modules/_pager.scss
+++ b/app/assets/stylesheets/partials/modules/_pager.scss
@@ -11,9 +11,9 @@
 */
 
 .pager {
-	border-top: 1px solid $color-grey-1;
+	border-top: 1px solid $color-grey-med-3;
   @include to-rem(padding-top, $spacing-half);
-  color: $color-light-txt;
+  color: $color-txt-light;
 
   /* Prev and next */
   .btn.btn--main {
