--- a/app/assets/stylesheets/partials/modules/_tags.scss
+++ b/app/assets/stylesheets/partials/modules/_tags.scss
@@ -13,7 +13,7 @@
 .tags {
   border-width: 1px 0;
   border-style: solid;
-  border-color: $color-grey-1;
+  border-color: $color-grey-med-3;
   @include to-rem(margin-top, $spacing-half);
   @include to-rem(padding-top, $spacing-quarter - 1);
   @include to-rem(padding-bottom, $spacing-quarter*2);
@@ -23,8 +23,8 @@
     @include to-rem(margin-right margin-top, $spacing-quarter);
     position: relative;
     @include font-size($font-size-sml, 1);
-    color: $color-light-txt;
-    border: 1px solid $color-grey-1;
+    color: $color-txt-light;
+    border: 1px solid $color-grey-med-3;
     border-radius: $border-radius;
     @include to-rem(max-width, 120);
 
