--- a/app/assets/stylesheets/partials/modules/_timeline.scss
+++ b/app/assets/stylesheets/partials/modules/_timeline.scss
@@ -39,7 +39,7 @@
       bottom: 0;
       /* left = `.timeline__date` left position + (`.timeline__date` width / 2) - (width of line / 2) */
       @include to-rem(left, 50);
-      background-color: $color-off-white;
+      background-color: $color-grey-light-3;
 
       /* Old IE */
       @include old-ie {display: none;}
@@ -65,7 +65,7 @@
 
   /* Start & finish times */
   > dd {
-    background-color: $color-grey-3;
+    background-color: $color-grey-light-2;
     border-radius: 2px;
     @include to-rem(padding, $spacing-half $spacing-base);
     @include to-rem(margin-bottom, $spacing-half);
@@ -81,7 +81,7 @@
     position: absolute;
     /* Should be even number so it can be divided by 2 which is needed for positioning the line between `timeline__date` */
     @include to-rem(left, 14);
-    background-color: $color-dark-txt;
+    background-color: $color-grey-dark-1;
     color: #fff;
     text-align: center;
     border-radius: 50%;
