--- a/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
@@ -84,7 +84,7 @@
 				float: none !important;
 				@extend %transition-subtle;
 				cursor: pointer;
-				border: 1px solid $color-grey-2;
+				border: 1px solid $color-grey-light-1;
 
 				/* Hover and active states */
 				&:hover,
@@ -146,7 +146,7 @@
 				content: "";
 				@include to-rem(width height, 8);
 				border-radius: 100%;
-				background-color: $color-grey-2;
+				background-color: $color-grey-light-1;
 				position: absolute;
 				top: 50%;
 				left: 50%;
@@ -156,7 +156,7 @@
 				/* Contain controls version */
 				.flexslider--contain-controls & {
 					box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
-					background-color: $color-light-txt;
+					background-color: $color-grey-med-1;
 				}
 			}
 		}
@@ -165,7 +165,7 @@
 		a:hover:before,
 		a:focus:before,
 		.flex-active:before {
-			background-color: $color-dark-txt;
+			background-color: $color-grey-dark-1;
 
 			/* Contain controls version */
 			.flexslider--contain-controls & {background-color: #fff;}
@@ -219,7 +219,7 @@
 		/* Arrow icon pseudo element */
 		&:before {
 			@extend %transition-subtle;
-			color: $color-dark-txt;
+			color: $color-txt-dark;
 			@include font-size(18, 1);
 
 			/* Contain controls version */
